# pbsd-1v

./: .gitignore  BUILD_VERIFICATION.md  DLL_FIX_SUMMARY.md  EXTERNAL_PUTTY_BUILD_COMPLETE.md  PAIRADMIN_DEBUG_STATUS.md  PHASE_10_COMPLETE_SUMMARY.md  PHASE_1_COMPLETE_SUMMARY.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_3_COMPLETE_SUMMARY.md  PHASE_4_COMPLETE_SUMMARY.md  PHASE_5_BLOCKED_ANALYSIS.md  PHASE_5_BLOCKING_ANALYSIS.md  PHASE_6_COMPLETE_SUMMARY.md  PHASE_7_COMPLETE_SUMMARY.md  PHASE_8_COMPLETE_SUMMARY.md  PHASE_9_COMPLETE_SUMMARY.md  PairAdmin.sln  TASK_1.1_COMPLETION_REPORT.md  TASK_1.2_COMPLETION_REPORT.md  TASK_1.3_COMPLETION_REPORT.md  TASK_1.4_COMPLETION_REPORT.md  TASK_1.4_SPECIFICATION.md  TASK_10.1_SPECIFICATION.md  TASK_10.2_SPECIFICATION.md  TASK_10.3_SPECIFICATION.md  TASK_10_PHASE_OVERVIEW.md  TASK_2.1_COMPLETION_REPORT.md  TASK_2.2_SPECIFICATION.md  TASK_2.3_COMPLETION_REPORT.md  TASK_2.4_COMPLETION_REPORT.md  TASK_3.1_COMPLETION_REPORT.md  TASK_3.1_SPECIFICATION.md  TASK_3.2_COMPLETION_REPORT.md  TASK_3.2_SPECIFICATION.md  TASK_3.3_COMPLETION_REPORT.md  TASK_3.3_SPECIFICATION.md  TASK_4.1_COMPLETION_REPORT.md  TASK_4.1_SPECIFICATION.md  TASK_4.2_COMPLETION_REPORT.md  TASK_4.2_SPECIFICATION.md  (+21 more)
installer/: PairAdmin.wxs  Product.wxs  UI.wxs
lib/: PairAdminPuTTY.lib
nuget/: NuGet.config
src/PuTTY/: CMakeLists.txt  PUTTY_MODIFICATIONS.c  PuTTY.vcxproj  README.md  README_INTEGRATION.md  build.bat  build_dll.bat  ldisc_modifications.c  modifications.txt  pairadmin.c  pairadmin.def  pairadmin.h  terminal_modifications.c  window_modifications.c
(+129 files in other folders)
